--- a/CodingBat/nbproject/project.properties
+++ b/CodingBat/nbproject/project.properties
@@ -54,7 +54,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=codingbat.CodingBat
+main.class=codingbat.Warmup_1
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
